--- a/eurosong-festival/package.json
+++ b/eurosong-festival/package.json
@@ -13,8 +13,11 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "node-sass": "^4.12.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
-  }
+  },
+  "_id": "eurosong-festival@0.1.0",
+  "readme": "ERROR: No README data found!"
 }
