--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@vue/cli": "^4.5.15",
     "core-js": "^3.6.5",
+    "numeral": "^2.0.6",
     "vue": "^2.6.11"
   },
   "devDependencies": {
